update workflow file for ansible playbook file location into server

--- a/.github/workflows/preprod.yml
+++ b/.github/workflows/preprod.yml
@@ -65,5 +65,5 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd ~/ansible/auth-service/
+            cd ~/task_service/deploy/
             ansible-playbook -i inventory deploy_microservices.yml
